# GEMSTAT

./: autogen.sh  example_markov.bash  full_protoc_buildtest.bash  make_test_input.py  make_test_input2.py  protoc.bash
data/: factor_info.txt
data_streamtest/: example.out  example.par
data_streamtest/factors/: Kr.txt  bcd.txt  cad.txt  gt.txt  hb.txt  kni.txt
src/: ExprFunc.cpp  ExprFunc.h  ExprModel.cpp  ExprModel.h  ExprPar.cpp  ExprPar.h  ExprPredictor.cpp  ExprPredictor.h  IO.cpp  IO.h  Makefile.am  ObjFunc.cpp  Pioneers.cpp  Pioneers.h  PredictorTrainer.cpp  PredictorTrainer.h  SeqAnnotator.cpp  SeqAnnotator.h  Tools.cpp  seq2expr.cpp  seq2expr_streaming.cpp
src/conf/: ExprParConf.hpp
src/protocol/: gemstat.proto  math_types.proto  motif.proto  sequence.proto
src/rates/: RatesExprFunc.cpp  RatesExprFunc.h
